# Agentic-Labor

./: .env.example  .gitignore  .pre-commit-config.yaml  ADR-002.md  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  compile-nightly.yml  compile-on-pr.yml  eval-on-pr.yml  guardrails.yml
alembic/: env.py
alembic/versions/: 20260518_2345_initial_registry_schema.py
crews/: __init__.py  base.py  stammdaten.py  swarm_crew.py
deploy/langfuse/: clickhouse-ttl.xml  docker-compose.yml  healthcheck.sh
deploy/langfuse/terraform/: main.tf  variables.tf
deploy/memory/: docker-compose.yml
deploy/memory/backup/: neo4j-backup.sh
deploy/otel/: otel-collector-config.yaml
docs/: ADR-004.md  INTEGRATION.md  INTEGRATION_ORDER.md  prioritization.md
docs/adr/: ADR-005-zep-graphiti-temporal-memory.md
evals/datasets/: _schema.py  classify_hs_code.jsonl  classify_invoice_exception.jsonl  customs_hs.jsonl  draft_customer_email.jsonl  draft_mahnung_letter.jsonl
examples/: customs_case.py  end_to_end.py
harness/: __init__.py  pipeline.py
scripts/: check_contracts_imported.py  check_forbidden_deps.py  check_workflow_residency.py  detect_model_downgrades.py  seed_golden.py
src/putsch_compile/: __init__.py  adapters.py  artifacts.py  cli.py  config.py  exceptions.py  feedback.py  logging.py  metrics.py  optimize.py  registry.py  routing.py  tracing.py
src/putsch_compile/signatures/: __init__.py  _base.py  classify_hs_code.py  classify_invoice_exception.py  draft_customer_email.py  draft_mahnung_letter.py  extract_invoice_fields.py  generate_datev_booking_code.py  summarize_audit_trail.py
src/putsch_docs/: __init__.py  confidence.py  config.py  exceptions.py  extractor.py  mcp_server.py  signatures.py  tools.py  validators.py
src/putsch_memory/: config.py  conflicts.py  exceptions.py  graphiti_client.py  migrations.py  ontology.py
src/putsch_memory/eval/: reconstruction_accuracy.py  temporal_correctness.py
src/putsch_memory/eval/fixtures/: disambiguation_cases.json  german_business_scenarios.json  reconstruction_cases.json
src/putsch_memory/ingestion/: __init__.py  datev_period_close.py  email_ingestion.py
src/putsch_memory/tools/: __init__.py  lookup_account_routing.py  lookup_vendor.py  temporal_query.py
src/putsch_memory/writers/: __init__.py  ap_episode.py  base.py  mahnverfahren_episode.py  stammdaten_episode.py
src/putsch_obs/: cli.py  config.py  correlation.py  exceptions.py  instrumentation.py  logging.py  redaction.py
src/putsch_obs/dashboards/: apply.py  putsch_drift.json  putsch_model_routing.json
src/putsch_obs/dsgvo/: __init__.py  registry.py
src/putsch_obs/eval/: harness_diff.py  harness_targets.py  human_review.py  judges.py  schemas.py
src/putsch_obs/integrations/: __init__.py  _base.py  crewai.py  docling.py  dspy.py  langgraph.py
src/putsch_obs/vault/: audit.py
swarm/: graph.py  ledger.py  models.py  orchestrator.py  state.py  workers.py
tests/: conftest.py  test_chaos.py  test_concurrency.py  test_confidence.py  test_conflicts.py  test_crews.py  test_extractor.py  test_fallback.py  test_feedback.py  test_gdpr.py  test_graph.py  test_graphiti_client.py  test_guardrails.py  test_injection_defense.py  test_ledger.py  test_migrations.py  test_optimizer_integration.py  test_orchestrator.py  test_performance.py  test_pipeline.py  test_registry.py  test_regression.py  test_signatures_contract.py  test_trust.py  test_validators.py
tests/fixtures/: README.md  clean_xrechnung.xml  invoice_real_shape.json  labels.json  pii_corpus.py
tests/integration/: conftest.py  test_chaos_langfuse_down.py  test_crewai_trace.py  test_e2e_invoice.py  test_eval_runner.py
tests/unit/: test_alerts.py  test_audit_chain.py  test_config.py  test_harness_diff.py  test_instrumentation.py  test_redaction_properties.py
trust/: __init__.py  hierarchy.py  wrappers.py
