[project]
name = "agentic-labor-swarm"
version = "0.1.0"
description = "Magentic-One swarm coordination on LangGraph (Prompt 3 of 6, Putsch AI deployment)."
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.5",
    "langgraph>=0.2",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2", "langchain-core>=0.3"]
anthropic = ["langchain-anthropic>=0.2", "langchain-core>=0.3"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["swarm*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
