[project]
name = "agentic-labor"
version = "0.1.0"
description = "EU-sovereign, Frankfurt-hosted multi-agent back-office automation stack for Putsch Mittelstand."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Putsch Platform Engineering" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]

# The root distribution is a meta-package — it carries no code of its own,
# only the union of the workspace members. Install it with
# `uv sync --all-packages` (uv) or `pip install -e packages/<name>` per
# package (vanilla pip). The five member packages are versioned and
# released independently; this root exists to give the monorepo a single
# entry point for CI, dev-environment bootstrap, and dependency resolution.
dependencies = [
    "agentic-labor-swarm",
    "putsch-docs",
    "putsch-compile",
    "putsch-memory",
    "putsch-obs",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
agentic-labor-swarm = { workspace = true }
putsch-docs = { workspace = true }
putsch-compile = { workspace = true }
putsch-memory = { workspace = true }
putsch-obs = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "hypothesis>=6.100",
]

[tool.ruff]
# Each package owns its own ruff config; this root config governs only
# files at the workspace root (configs, scripts, docs/).
line-length = 100
target-version = "py311"
extend-exclude = ["packages/*"]

[tool.pytest.ini_options]
# Root-level pytest invocation discovers per-package tests by walking
# packages/*/tests. Each package's pyproject pins its own pytest config;
# we union them here for `make test` convenience without overriding.
testpaths = ["packages"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: requires live services (docker compose stack)",
    "chaos: deliberately injects faults",
    "perf: enforces latency budgets",
]
